Add marketplace url

--- a/SpiderNavigation.uplugin
+++ b/SpiderNavigation.uplugin
@@ -8,7 +8,7 @@
 	"CreatedBy": "Roman Nix",
 	"CreatedByURL": "http://me.getid.org/",
 	"DocsURL": "https://github.com/rnixik/spider-navigation-plugin",
-	"MarketplaceURL": "",
+	"MarketplaceURL": "com.epicgames.launcher://ue/marketplace/content/9061da2ec4df457dbce7c416381896d5",
 	"SupportURL": "",
 	"CanContainContent": true,
 	"IsBetaVersion": false,
